<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".MainActivity"
    android:padding="10dp"

    android:layout_gravity="center"
    android:background="@color/bl">






    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">




            <LinearLayout

                android:orientation="horizontal"
                android:id="@+id/linearlayout"

                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_weight="3"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/firstbg" />


            </LinearLayout>









    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/placeview"
            android:clickable="true"

            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:background="@drawable/place_background"
                    android:src="@drawable/place_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/option1"
                    android:textSize="25dp"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/findView"
            android:clickable="true"

            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:background="@drawable/find_background"
                    android:src="@drawable/find"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/option2"
                    android:textSize="25dp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>



    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/workView"
            android:clickable="true"

            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:background="@drawable/guide_background"
                    android:src="@drawable/work_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/option3"
                    android:textSize="25dp"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/fourthview"
            android:clickable="true"

            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:background="@drawable/find_background"
                    android:src="@drawable/find"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/option5"
                    android:textSize="25dp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>









    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/fourthview1"
            android:clickable="true"

            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:background="@drawable/guide_background"
                    android:src="@drawable/work_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/option6"
                    android:textSize="25dp"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/SpectacularPlaces"
            android:clickable="true"

            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:background="@drawable/find_background"
                    android:src="@drawable/find"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/option7"
                    android:textSize="25dp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>

    </ScrollView>


</LinearLayout>